--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 body{
-    background-color: whitesmoke
+    background-color: rgb(224, 88, 75);
+    color: rgb(0, 0, 0);
+    font-size: 130%;
+}
+
+a{
+    color: rgb(199, 252, 252);
+    text-decoration: none;
+}
+
+a:hover{
+    color: rgb(91, 91, 91);
+    background-color: rgb(224, 88, 75);
+}
+
+ul,li{
+    list-style:none;
 }
