--- a/style.css
+++ b/style.css
@@ -1,19 +1,39 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
-    background-color: rgb(224, 88, 75);
-    color: rgb(0, 0, 0);
+    background-color: rgb(23, 23, 23);
+    color: rgb(255, 255, 255);
     font-size: 130%;
 }
 
 a{
-    color: rgb(199, 252, 252);
+    color: rgb(208, 208, 208);
     text-decoration: none;
+    filter: drop-shadow(4px 4px 2px rgba(255,255,151,0.6));
 }
 
 a:hover{
-    color: rgb(91, 91, 91);
-    background-color: rgb(224, 88, 75);
+    color: rgb(51, 50, 50);
+    background-color: rgb(250, 248, 188);
+    
 }
 
 ul,li{
     list-style:none;
 }
+
+.bg{
+    width:100%;
+    height: 100vh;
+    background-image: url(./img/BlackWP.jpg);
+    background-repeat: no-repeat;
+    padding: 30px;
+}
+
+a{
+    margin: 63px;
+}
+
